View pack mods